deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: octopus
  namespace: octopus
  labels:
    app: octopus
    app.kubernetes.io/name: octopus
    app.kubernetes.io/part-of: octopus
spec:
  type: ClusterIP
  selector:
    app: octopus
  ports:
    - name: http
      port: 1088
      targetPort: http
      protocol: TCP
